endpoint faltantes agregados
